@startuml
'https://plantuml.com/class-diagram



class Ship{
-mmsi
-imo
-callsign
-ngenerators
-generatortype
-shipname
-vesselType
-lenght
-width
-capacity
-draft
-bstShipPosition
+getMMSI()
+getBSTPosition()
+getShipName()


}

class Company{
-BSTShip
+getBSTShip()
}

class ShipPosition{
-aisMessage
-latitude
-longitude
-sog
-cog
-heading
-position
-cargo
-transceiver
+getAisMessage()
+getLatitude()
+getLongitude()
+getSog()
+getCog()

}
abstract BSTShip{
-root
+search()
}

abstract BSTShipPosition {
-root
+getSize()
+minDate()
+maxDate()
+calculateDistance()
+toRadian()
+inOrderCalculateDistance()
+inOrderMaxSog()
+inOrderMinSog()
+inOrderMaxCog()
+inOrderMinCog()
+dateDiff()
+search()
+inOrderIterable()
}





class ShipInfoController{
-company
+importCSV()
}






ShipInfoController..>Company
ShipInfoController..>BSTShip
ShipInfoController..>BSTShipPosition
ShipInfoController..>ShipPosition
ShipInfoController..>Ship
ShipInfoController..>WriteTxt


BSTShip ...>BSTShipPosition
BSTShip ...>Ship

BSTShipPosition ...>ShipPosition

Ship --> ShipPosition
@enduml